--- a/SecuritySystem/templates/aiCamera.html
+++ b/SecuritySystem/templates/aiCamera.html
@@ -14,29 +14,9 @@
         </div>
     </div>
     <div class='anotherPage'>
-        <a class='dashboardButton' href='{{url_for('takePhoto')}}'>Take Photo</a>
-        <button class='dashboardButton' onclick="document.getElementById('trainForm').style.display='block'">Train AI</button>
+        <a class='dashboardButton' href='{{url_for('takePhoto')}}'>Add New Face</a>
         <a class='dashboardButton' href='{{url_for('facialRecognition')}}'>Facial Recognition</a>
+        <a class='dashboardButton' href='{{url_for('unknownFaceCaptured')}}'>Unknown Face Captured</a>
     </div>
-    <div id="trainForm" style="display:none;">
-        <form id="trainAIForm">
-            <label for="person">Person's Name (folder name):</label>
-            <input type="text" id="person" name="person" value="{{ username }}" required>
-            <button type="button" onclick="trainAI()">Start Training</button>
-        </form>
-    </div>
-    <script>
-        function trainAI() {
-            let person = document.getElementById('person').value;
-            if (!person) {
-                alert('Please enter the person\'s name.');
-                return;
-            }
-            fetch(`/train?person=${encodeURIComponent(person)}`)
-                .then(response => response.json())
-                .then(data => alert(data.message))
-                .catch(error => alert('Error: ' + error));
-        }
-    </script>
 </body>
 </html>
